public/assets/sass/front/_layout.scss
.avfr-wrap-wrap {
    @include clearfix;

    * {
        @include box-sizing(border-box);
    }

}

.avfr-layout-main {
    width: 100%;
}

.avfr-layout-submit {
    @include clearfix;
    margin:$entry-margin;
    padding:$entry-padding;
    border-top:$br-width solid $border-color;
    border-bottom:$br-width solid $border-color;

    .avfr-submit-left {
        float: left;
        padding:10px 0;
        @include box-sizing(border-box);
    }

    .avfr-submit-right {
        float: right;
        padding:10px 0;
        @include box-sizing(border-box);
    }

}

#avfr-entry-form input[type="submit"],
.avfr-button {
    width: 147px;
    text-align: center;
    background:$button-background;
    color:$button-color;
    @include border-radius($br-rad);
    padding: 8px;
    text-decoration: none;
    @include transition(background .1s ease);
    display: inline-block;

    &:visited,
    &:hover {
        color:white;
        background:darken($button-background,5);
    }

    &:active {
        outline:none;
        background:darken($button-background,8);
        @include box-shadow(inset 0 1px 1px rgba(0,0,0,0.5));
    }

}

#avfr-entry-form input[type="submit"].avfr-button {
    width: 110px;
}

.avfr-entry-wrap {
    @include clearfix;
    display: block;
    padding:$entry-wrap_padding;
    margin-bottom: 0 !important;

    &:nth-child(even) {
        background:darken($primary,3);
    }

    footer,div.entry-meta {
        display: table;
        margin: 0;

        div {
            display: inline-block;
            color: #acacac;
            margin: 16px;
        }

        .avfr-short-group {
            padding-left: 0;
            margin-left: 0;
        }

        span {
            display: inline-block;
            color: #c7c7c7;
            text-decoration: none;
            vertical-align: text-top;
            margin: 0;
        }

        img {
            box-shadow: none;
        }

        a {
            color : $link-color;

            &:hover,
            &:focus,
            &:active {
                color : $link-color;
            }

        }

    }
    footer {
        margin-left: 132px;
    }

    .entry-header {
        margin-top : 0;
        display: table;
        margin: 0;

        .entry-title {
            font-weight: bold;
            font-size: 20px;
            margin: 0;
        }

    }
    .entry-content {
        display: table;
        margin-left: 132px;

        .read-more {
            font-size: 0.9em;
            padding-left: 15px;
        }

    }
}


.avfr-entry {
    font-size:$entry-font_size;
    line-height: $entry-font_lineheight;
    display: table;
    margin: 0;

    p {
        margin: 0px;
    }

    img {
        box-shadow: none;
    }

}

.avfr-controls {
    text-align: center;
    border: $br-width solid $border-color;
    padding: 8px;
    width:  $default-width;
    @include border-radius($br-rad);
    background-color: #fff;
    line-height: 1.5;

    .avfr-totals {
        padding: 5px;

        .avfr-totals-num {
            font-size: 18px;
            line-height: 22px;
        }

        .avfr-totals-label {
            font-size: 12px;
            color: $vote-lable-color;
        }

    }

    &.voted {
        font-size:85%;
        display:block;
        line-height:1;
        margin-top: 8px;
    }
}

.avfr-vote-up,
.avfr-vote-down {
    position:relative;
    overflow: hidden;
    display:inline-block;
    height:30px;
    width:32px;
    font-size:$icon-font_size;
    margin-top: -2px;
    text-decoration: none;
    border:$br-width solid #ccc;
    @include border-radius($br-rad);

    &:after {
        font-family:dashicons;
        position:absolute;
        left:0;
        top:2px;
        right:0;
        bottom:0;
        height:16px;
    }

    &:focus,
    &:active {
        outline:none;
    }
}
.avfr-vote-up{
    margin-rigth: 2px;
    &:after {
        content:'\f529';
        color:$green;
    }

    &:hover:after {
        color:darken($green,5);
    }

}
.avfr-vote-down {
    margin-left: 2px;

    &:after {
        content:'\f542';
        color:$red;
    }

    &:hover:after {
        color:darken($red,5)
    }

}

.ah-thanks,
.avfr-totals {
    font-size:95%;
}

.ah-thanks {
    line-height:0.9;
}

.avfr-status {

    margin-top:10px;
    font-size:12px;
    letter-spacing: 0.05em;
    text-transform: capitalize;

    span{
        display:inline-block;
        vertical-align: baseline;
        white-space: nowrap;
        text-align: center;
        padding:11px 0px;
        color:white;
        text-shadow:0 1px 1px rgba(0,0,0,0.1);
        @include border-radius($br-rad);
        width: 114px;
        font-size: 13px;
        line-height: 1.5;
    }

    .avfr-status-approved{
        background: $green;
    }

    .avfr-status-declined{
        background: $red;
    }

    .avfr-status-completed{
        background: $blue;
    }

}

.avfr-loadmore a{
    margin:20px auto;
}

.avfr-filter-controls {
    margin-left: 0 !important;
    padding: 15px 0px;

    .avfr-filter-control-item {
        display: inline-block;
        
        a {
            @include button-variant($btn-color, $btn-bg, $border-color);
            @include button-size($btn-pad-ver, $btn-pad-hor, $filter-line-height, $br-rad);
            text-decoration: none;
            border-width: $br-width;
            font-size: 13px;
        }
        
    }

}

.status-changing {
    float: right;

    a {
        @include button-variant($btn-color, $btn-bg, $border-color);
        @include button-size($btn-pad-ver,  $btn-pad-hor - 10px , $filter-line-height, $br-rad);
        text-decoration: none;
        border-width: $br-width;
        font-size: 13px;
    }

}

.avfr-vote-now {
    @include button-variant($btn-color, $btn-bg, $border-color);
    padding: ($btn-pad-ver - 3) $btn-pad-hor;
    border-width: $br-width;
    font-size: 13px;
    @include border-radius($br-rad);
}

.avfr-disabled-button {
    @include button-variant(lighten($btn-color, 50%), lighten($btn-bg, 7%), lighten($border-color, 7%));
    @include button-size($btn-pad-ver - 2px, $btn-pad-hor, $filter-line-height, $br-rad);
    border-width: $br-width;

    margin: 0;
    &:hover {
        border-color: lighten($border-color, 7%);
        color: lighten($btn-color, 50%);
    }

}
.avfr-votes-area {
    margin-right: 20px;
    float: left;

    .flag-show {
        text-align: center;
        padding-top: 5px;

        a {
            text-decoration: none;
        }

    }

}

.avfr-tooltip {
    display: none;
    position: absolute;
    background-color: #fff;
    border: $br-width solid $border-color;
    @include border-radius($br-rad);
    padding: 15px;
    margin-top: -30px;
    text-align: left;
    line-height: 30px;
    @include box-shadow( 0 0 1px 2px rgba(222,222,222,0.5) );

    a{
        @include button-variant($btn-color, $btn-bg, $border-color);
        @include button-size($btn-pad-ver - 3px, $btn-pad-hor, $filter-line-height, $br-rad);
        margin-right: 10px;
        text-decoration: none;
        border-width: $br-width;
        font-size: 13px;
    }

    p {
        padding-bottom: 10px;
    }

    .small-text {
        font-size: 0.7em;
        padding-bottom: 0;
    }

}

.attachments {
    margin-top: 30px;
    margin-bottom: 50px;

    img {
        border: 2px solid $border-color;
        @include border-radius(0);
    }

    .image-caption {
        font-weight: bold;
        color: $link-color;
    }

}

.related-features-section {
    margin-bottom: 40px;
    padding-bottom: 20px;

    .related-title {
        font-weight: bold;
        color: $link-color;
    }

    .single-related {
        text-decoration: none;
        font-weight: bold;

        li {
            list-style: none;
        }
        
    }
}

@include keyframes(avfrreloadanimation) {
    0%   {@include rotate(0);}
    100% {@include rotate(360deg);}
}

.avfr-reload-animation {
    @include animation(avfrreloadanimation 1s infinite linear);
    @include transform-origin($default-origin-x, $default-origin-x)
}

#avfr-avatar{
   margin-bottom: 70px; 
   margin-top: 15px;
   vertical-align: none;

   img{
        float: left;    
        height: 40px;
        width: 40px;
        border: $br-width solid $border-color;
    }

    #avfr-avatar-name{
        margin-left: 15px;
        padding-top: 0px;
        float: left;
        font-weight:bold;
        font-size: 13px;
    }

    span{
        font-weight: normal;
        color: black; 
    }

    .date{
        padding-left: 1px;
        padding-top: 0px;
        font-size: 11px;
        color: #cccccc;
    }

}

#avfr-delete{
    float: right;
    margin: 20px;
    color: #cccccc;
    font-weight: normal;
    font-size: 13px;

    .dashicons {
        vertical-align: middle;
    }
}

.related-avfr-section li {
    padding: 5px 0;
}

.triangle-down {
    position: relative;

    &:after {
        content: '';
        display: inline-block;
        position: absolute;
        background-color: transparent;
        border: solid transparent;
        border-top-color: #999;
        pointer-events: none;
        border-width: 6px 4px 4px 4px;
        top: 50%;
        right: 15px;
    }

}

#avfr-filter-groups, #avfr-filter-status, .featureroup, .change-status-select {
    vertical-align: baseline;
    @include appearance(none);
    position: relative;
    padding: 6px 30px 6px 6px;
    @include border-radius($br-rad);
    border: $br-width solid $border-color;
}

